internal and external modules using args

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 atividades do curso/
 src/node_modules
 src/2_FUNDAMENTALS/5_external_modules/node_modules
+src/2_FUNDAMENTALS/6_practicing_with_args/node_modules
