--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ src/2_FUNDAMENTALS/5_external_modules/node_modules
 src/2_FUNDAMENTALS/6_practicing_with_args/node_modules
 src/2_FUNDAMENTALS/8_chalk/node_modules
 src/2_FUNDAMENTALS/10_input_abstraction/node_modules
+src/2_FUNDAMENTALS/15_task_2/node_modules
