--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ src/2_FUNDAMENTALS/10_input_abstraction/node_modules
 src/2_FUNDAMENTALS/15_task_2/node_modules
 src/4_NPM_FUNDAMENTAL/3_installing_packages/node_modules
 src/4_NPM_FUNDAMENTAL/4_dev_dependency/node_modules
+src/5_ACCOUNTS/node_modules
