add accounts folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ src/2_FUNDAMENTALS/15_task_2/node_modules
 src/4_NPM_FUNDAMENTAL/3_installing_packages/node_modules
 src/4_NPM_FUNDAMENTAL/4_dev_dependency/node_modules
 src/5_ACCOUNTS/node_modules
+src/5_ACCOUNTS/accounts
