starting with handlebars

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ src/6_EXPRESS/7_data_post
 src/6_EXPRESS/8_route_module/node_modules
 src/6_EXPRESS/9_working_with_css/node_modules
 src/6_EXPRESS/10_404/node_modules
+src/7_TEMPLATE_ENGINE/1_starting_with_handlebars/node_modules
