--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ src/6_EXPRESS/8_route_module/node_modules
 src/6_EXPRESS/9_working_with_css/node_modules
 src/6_EXPRESS/10_404/node_modules
 src/7_TEMPLATE_ENGINE/1_starting_with_handlebars/node_modules
+src/7_TEMPLATE_ENGINE/2_layouts/node_modules
+src/7_TEMPLATE_ENGINE/3_data_for_view/node_modules
