--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ src/6_EXPRESS/10_404/node_modules
 src/7_TEMPLATE_ENGINE/1_starting_with_handlebars/node_modules
 src/7_TEMPLATE_ENGINE/2_layouts/node_modules
 src/7_TEMPLATE_ENGINE/3_data_for_view/node_modules
+src/7_TEMPLATE_ENGINE/4_conditional/node_modules
