--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ src/7_TEMPLATE_ENGINE/1_starting_with_handlebars/node_modules
 src/7_TEMPLATE_ENGINE/2_layouts/node_modules
 src/7_TEMPLATE_ENGINE/3_data_for_view/node_modules
 src/7_TEMPLATE_ENGINE/4_conditional/node_modules
+src/7_TEMPLATE_ENGINE/6_repeating_structure/node_modules
