--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ src/7_TEMPLATE_ENGINE/2_layouts/node_modules
 src/7_TEMPLATE_ENGINE/3_data_for_view/node_modules
 src/7_TEMPLATE_ENGINE/4_conditional/node_modules
 src/7_TEMPLATE_ENGINE/6_repeating_structure/node_modules
+src/7_TEMPLATE_ENGINE/7_with/node_modules
+src/7_TEMPLATE_ENGINE/8_partials/node_modules
