--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ src/7_TEMPLATE_ENGINE/4_conditional/node_modules
 src/7_TEMPLATE_ENGINE/6_repeating_structure/node_modules
 src/7_TEMPLATE_ENGINE/7_with/node_modules
 src/7_TEMPLATE_ENGINE/8_partials/node_modules
+src/7_TEMPLATE_ENGINE/9_css/node_modules
