--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ src/7_TEMPLATE_ENGINE/6_repeating_structure/node_modules
 src/7_TEMPLATE_ENGINE/7_with/node_modules
 src/7_TEMPLATE_ENGINE/8_partials/node_modules
 src/7_TEMPLATE_ENGINE/9_css/node_modules
+src/8_NODE_WITH_SQL/1_working_with_mysql/node_modules
