--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ src/7_TEMPLATE_ENGINE/9_css/node_modules
 src/8_NODE_WITH_SQL/1_working_with_mysql/node_modules
 src/8_NODE_WITH_SQL/8_connection_pool/node_modules
 src/8_NODE_WITH_SQL/9_prepare_query_sql_injection/node_modules
+src/9_SEQUELIZE/1_working_with_sequelize/node_modules
