--- a/src/11_THOUGHTS/package.json
+++ b/src/11_THOUGHTS/package.json
@@ -10,7 +10,7 @@
   "author": "Douglas Tertuliano",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
