feat: connecting with mongoose

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ src/9_SEQUELIZE/1_working_with_sequelize/node_modules
 src/10_MVC/node_modules
 src/11_THOUGHTS/node_modules
 src/12_MONGODB/node_modules
+src/13_MONGOOSE/node_modules
