initial commit for API project

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ src/10_MVC/node_modules
 src/11_THOUGHTS/node_modules
 src/12_MONGODB/node_modules
 src/13_MONGOOSE/node_modules
+src/14_API/node_modules
